2023-10-01  Stefan Kangas  <stefankangas@gmail.com>

	* tramp.el (tramp-default-method): Capitalize 'Windows' where it
	clearly refers to the non-free operating system with that name.

2023-09-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-bsd-unames): New defconst.
	(tramp-sh-handle-file-ownership-preserved-p)
	(tramp-open-connection-setup-interactive-shell)
	(tramp-get-ls-command): Use it.
	(tramp-sh-handle-insert-directory): Improve handling of "--dired".

2023-09-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Adapt docstring.  (Bug#66093)
	(tramp-handle-make-process): Replace ?a by "-t" if indicated.

	* tramp-sshfs.el (tramp-methods): Use "%a".
	(tramp-sshfs-handle-process-file): Replace ?a by "-t".

2023-09-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-write-region): Fix missing comma.
	(Bug#66123)

2023-09-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-container.el (tramp-skeleton-completion-function):
	Bind `tramp-verbose' to 0.
	(tramp-toolbox--completion-function)
	(tramp-flatpak--completion-function): Use METHOD as argument.
	Use `tramp-skeleton-completion-function'.
	(tramp-completion-multi-hop-methods): Add "toolbox" and "flatpak".

2023-09-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-otp-password-prompt-regexp): New defcustom.
	(tramp-action-otp-password): New defun.

	* tramp-container.el (tramp-skeleton-completion-function): New defmacro.
	(tramp-container--completion-function): Use it.
	(tramp-kubernetes--completion-function): Use METHOD as argument.
	Use `tramp-skeleton-completion-function'.
	(tramp-skeleton-kubernetes-vector): New defmacro.
	(tramp-kubernetes--current-context)
	(tramp-kubernetes--current-context-data): Use it.
	(tramp-completion-multi-hop-methods): Add "kubernetes".

	* tramp-message.el (tramp-debug-message): Publish the name of the
	debug file name.

	* tramp-sh.el (tramp-actions-before-shell)